--- a/TicketSystem/Views/Customer/Confirmation.cshtml
+++ b/TicketSystem/Views/Customer/Confirmation.cshtml
@@ -30,4 +30,4 @@
     </div>
 </div>
 
-<a class="btn btn-primary" asp-controller="Customer" asp-action="LandingPage">Back to homepage</a>
+<a class="btn btn-primary" asp-controller="Customer" asp-action="LandingPage"><i class="fas fa-angle-left"></i> Back to events</a>
