--- a/TicketSystem/Views/Customer/OrderTicket.cshtml
+++ b/TicketSystem/Views/Customer/OrderTicket.cshtml
@@ -57,10 +57,10 @@
         </div>
         <div class="row">
             <div class="col-8">
-                <a class="btn btn-primary" asp-controller="Customer" asp-action="LandingPage">Back</a>
+                <a class="btn btn-primary" asp-controller="Customer" asp-action="LandingPage"><i class="fas fa-angle-left"></i> Back</a>
             </div>
-            <div class="col-4">
-                <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Order Ticket</button>
+            <div class="col-4 text-right">
+                <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Buy Ticket</button>
             </div>
         </div>
     }
