--- a/TicketSystem/Views/Organizer/Login.cshtml
+++ b/TicketSystem/Views/Organizer/Login.cshtml
@@ -11,10 +11,24 @@
 </p>
 ﻿
 
-<h2 class="mt-3 mb-3">Organizer Login-page</h2>
-<div class="row">
-    <div class="col-12 ">
-        <div class="card w-50">
+
+<div class="row mb-5">
+    <div class="col-4">
+        <div class="card mt-5" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-subtitle mb-2 text-muted"><b><i class="far fa-question-circle"></i> As an organizer you can:</b></h5>
+
+                <ul class="list-group list-group-flush text-muted">
+                    <li class="list-group-item"><i class="fas fa-angle-right"></i> Create events</li>
+                    <li class="list-group-item"><i class="fas fa-angle-right"></i> Sell tickets</li>
+                    <li class="list-group-item"><i class="fas fa-angle-right"></i> Monitor sold tickets</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="col-8 ">
+        <h2 class="">Organizer Login-page</h2>
+        <div class="card w-75">
             <div class="card-body">
                 @if (ViewBag.error != null)
                 {
@@ -28,16 +42,19 @@
                 {
                     <div class="form-group">
                         @Html.Label("Email Address *")
-                        @Html.TextBox("Email", null, new { required = true, placeholder = "Email Address", @class = "form-control", type = "email", id = "loginemail" })<br />
-                        <small id="emailHelp" class="form-text text-muted">Enter your email to login.</small>
+                        <small id="emailHelp" class="form-text text-muted">Enter your email.</small>
+                    @Html.TextBox("Email", null, new { required = true, placeholder = "Email Address", @class = "form-control", type = "email", id = "loginemail" })<br />
+
                     </div>
 
                     <div class="form-group">
                         @Html.Label("Password *") <br />
+                        <small id="passwordhelp" class="form-text text-muted">Enter your password.</small>
                         @Html.Password("Password", null, new { required = true, placeholder = "Password", @class = "form-control", id = "loginpassword" })<br />
 
                     </div>
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+                    <button type="submit" class="btn btn-primary d-block float-right"><i class="fas fa-sign-in-alt"></i> Sign in</button>
+                    <a asp-controller="organizer" asp-action="createorganizer">Not registered? - Sign up</a>
                 }
             </div>
         </div>
