--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -9,7 +9,8 @@
 
 <div class="row">
     <div class="col-6">
-        <h2>@ViewData["Title"]</h2>
+        <h2>Your Events</h2>
+        <a class="btn btn-primary w-40 mt-2" asp-controller="Organizer" asp-action="CreateEvent" asp-route-id="@organizer.OrganizerID"><i class="far fa-calendar-plus"></i> Create Event</a>
     </div>
     <div class="col-6 text-right">
         <div class="avatar-container d-block">
@@ -17,12 +18,10 @@
             <h4 class="d-inline align-middle mt-3 ml-2"> @organizer.ContactPerson</h4>
         </div>
         <div class="d-block">
-            <a class="btn btn-primary  w-40 mt-2" asp-controller="Organizer" asp-action="ChangeLoginInfo" asp-route-id="@organizer.OrganizerID"><i class="fas fa-user-edit"></i> Account information</a>
+            <a class="btn btn-primary  w-40 mt-1 btn-sm" asp-controller="Organizer" asp-action="ChangeLoginInfo" asp-route-id="@organizer.OrganizerID"><i class="fas fa-user-edit"></i> Account information</a>
         </div>
     </div>
-    <div class="row">
-        <a class="btn btn-primary w-100 mt-2" asp-controller="Organizer" asp-action="CreateEvent" asp-route-id="@organizer.OrganizerID">Create Event</a>
-    </div>
+   
     </div>
 
 
@@ -36,18 +35,24 @@
                             <img src="/Image/@eventt.Image" class="lpimg"/>
                         </div>
                         <div class="col-4">
-                            <h5 class="card-title">@eventt.EventName</h5>
-                            <p class="mb-0">@eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</p>
-                            <p class="mb-0">@eventt.Time.Hours:@eventt.Time.Minutes</p>
-                            <p class="mb-0">@eventt.Location</p>
+                            <h4 class="card-title"><b>@eventt.EventName</b></h4>
+                            <p class="mb-0"><b>Date: </b>@eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</p>
+                            <p class="mb-0"><b>Time:</b> @eventt.Time.Hours:@eventt.Time.Minutes</p>
+                            <p class="mb-0"><b>Location</b> @eventt.Location</p>
                         </div>
                         <div class="col-4">
-                            <p class="mb-0 mt-3">Tickets sold: @eventt.TicketsSold</p>
-                            <p class="mb-0 mt-3">Tickets left: @eventt.TicketsLeft</p>
+                            <button type="button" class="btn btn-light btn-sm mt-3 text-muted">
+                                <i class="fas fa-credit-card"></i> Tickets sold: <span class="badge badge-dark"> @eventt.TicketsSold</span>
+                            </button>
+                            <button type="button" class="btn btn-light btn-sm d-block mt-3 text-muted">
+                                <i class="fas fa-ticket-alt"></i> Tickets left: <span class="badge badge-dark">@eventt.TicketsLeft</span>
+                            </button>
+
+
                         </div>
                         <div class="col-2 text-center">
-                            <a class="btn btn-primary  w-100" asp-controller="Organizer" asp-action="OrganizerViewEvent" asp-route-id="@eventt.EventID">View Event</a>
-                            <a class="btn btn-primary  w-100 mt-3" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID">Edit Event</a>
+                            <a class="btn btn-primary  w-100" asp-controller="Organizer" asp-action="OrganizerViewEvent" asp-route-id="@eventt.EventID"><i class="fas fa-eye"></i> View Event</a>
+                            <a class="btn btn-primary  w-100 mt-3" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID"><i class="fas fa-edit"></i> Edit Event</a>
                         </div>
                     </div>
                 </div>
