--- a/TicketSystem/Views/Shared/_Layout.cshtml
+++ b/TicketSystem/Views/Shared/_Layout.cshtml
@@ -18,31 +18,29 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
-
+    
 </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand"  asp-controller="Customer" asp-action="orderticket" asp-route-id="17">View event</a>
+            <a class="navbar-brand"  asp-controller="Customer" asp-action="Landingpage">TicketSystem</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav mr-auto">
-                    <li class="mr-1"><a asp-area="" asp-controller="Customer" asp-action="LandingPage"><i class="fas fa-calendar-alt"></i>Events</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="ChangeLoginInfo"><i class="fas fa-address-card"></i>Change login info</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="CreateEvent"><i class="far fa-calendar-plus"></i>Create Event</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="CreateOrganizer"><i class="fas fa-user"></i>Create Organizer</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="EditEvent"><i class="fas fa-pen"></i>Edit Event</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="OrganizerLandingPage"><i class="fas fa-file-alt"></i>Overview</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="OrganizerViewEvent"><i class="fas fa-file-alt"></i>View</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="Login"><i class="fas fa-angle-right"></i>Login</a></li>
-
+                <ul class="navbar-nav col-2">
+                    <li class="m-2"><a asp-area="" asp-controller="Customer" asp-action="LandingPage"><i class="fas fa-calendar-alt"></i> Events</a></li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0 fas fa-search" type="submit"> Search</button>
-                </form>
+                <ul class="navbar-nav col-10 justify-content-end text-muted">
+                    <li class="m-2"><a asp-area="" asp-controller="Organizer" asp-action="ChangeLoginInfo"><i class="fas fa-address-card"></i> Change login info</a></li>
+                    <li class="m-2"><a asp-area="" asp-controller="Organizer" asp-action="CreateEvent"><i class="far fa-calendar-plus"></i> Create Event</a></li>
+                    <li class="m-2"><a asp-area="" asp-controller="Organizer" asp-action="CreateOrganizer"><i class="fas fa-user-plus"></i> Create Organizer</a></li>
+                    <li class="m-2"><a asp-area="" asp-controller="Organizer" asp-action="EditEvent"><i class="fas fa-edit"></i>  Edit Event</a></li>
+                    <li class="m-2"><a asp-area="" asp-controller="Organizer" asp-action="OrganizerLandingPage"><i class="fas fa-list-ul"></i> Overview</a></li>
+                    <li class="m-2"><a asp-area="" asp-controller="Organizer" asp-action="OrganizerViewEvent"><i class="fas fa-eye"></i> View</a></li>
+                    <li class="m-2"><a asp-area="" asp-controller="Organizer" asp-action="Login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                </ul>
+
             </div>
         </nav>
 
@@ -52,8 +50,11 @@
             <footer>
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 text-right">
-                            <a asp-area="" asp-controller="Organizer" asp-action="Login">Organizer login</a>
+                        <div class="col-6 text-muted">
+                            TicketSystem
+                        </div>
+                        <div class="col-6 text-right">
+                            <a asp-area="" asp-controller="Organizer" asp-action="Login"><i class="fas fa-sign-in-alt"></i> Organizer login</a>
                         </div>
                     </div>
                 </div>
