--- a/TicketSystem/Views/Organizer/CreateOrganizer.cshtml
+++ b/TicketSystem/Views/Organizer/CreateOrganizer.cshtml
@@ -29,24 +29,24 @@
         <div class="col-6 ">
             <h2>Create Organizer</h2>
             <div class="form-group mb-0">
-                @Html.Label("Contact Person name") <br />
-                @Html.TextBox("Name", null, new { required = true, placeholder = "Contact Person name", @class = "form-control" })<br />
+                @Html.Label("Contact person name *") <br />
+                @Html.TextBox("Name", null, new { required = true, placeholder = "Contact person name", @class = "form-control" })<br />
             </div>
             <div class="form-group mb-0">
-                @Html.Label("Organization name") <br />
+                @Html.Label("Organization name *") <br />
                 @Html.TextBox("OrganizationName", null, new { required = true, placeholder = "Organization Name", @class = "form-control" })<br />
             </div>
             <div class="form-group mb-0">
-                @Html.Label("Phonenumber") <br />
+                @Html.Label("Phone number *") <br />
                 @Html.TextBox("Phonenumber", null, new { required = true, placeholder = "Phone number", @class = "form-control", @type = "number" })<br />
             </div>
             <div class="form-group mb-0">
-                @Html.Label("Email Address") <br />
+                @Html.Label("Email Address *") <br />
                 @Html.TextBox("Email", null, new { required = true, placeholder = "Email Address", @class = "form-control" })<br />
 
             </div>
             <div class="form-group mb-">
-                @Html.Label("Password") <br />
+                @Html.Label("Password *") <br />
                 @Html.Password("Password", null, new { required = true, placeholder = "Password", @class = "form-control", @type = "password" })<br />
             </div>
             <hr />
