--- a/TicketSystem/Views/Organizer/EditEvent.cshtml
+++ b/TicketSystem/Views/Organizer/EditEvent.cshtml
@@ -13,12 +13,15 @@
     {
         <div class="row">
             <div class="col-12 mb-3">
-                <button type="button" class="btn btn-primary float-left">Cancel event</button>
-                <!-- Denne Delete knap skal kun vises på events der er udløbet eller cancelled
-                <button type="submit" class="btn btn-primary float-left ml-5">Delete event</button>
-                    -->
+                @if (eventt.ActiveState)
+                {
+                    <a class="btn btn-danger mt-5 text-white" data-toggle="modal" data-target="#ModalWindow"> <i class="fas fa-trash-alt"></i> Cancel Event</a>
+                }
+                else
+                {
+                    <a class="btn btn-success mt-5 text-white" data-toggle="modal" data-target="#ModalWindow2"> <i class="fas fa-trash-alt"></i> Reactivate Event</a>
+                }
             </div>
-
         </div>
         <div class="col-md-12">
             <div class="float-right form-group col-md-6">
@@ -63,6 +66,48 @@
             </div>
             <div class="col-4 text-right">
                 <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Save changes</button>
+            </div>
+        </div>
+
+        <div class="modal" tabindex="-1" role="dialog" id="ModalWindow">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Cancel Event</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to cancel your event?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <a class="btn btn-danger" asp-controller="Organizer" asp-action="CancelEvent" asp-route-id="@eventt.EventID">Cancel Event</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal" tabindex="-1" role="dialog" id="ModalWindow2">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Reactivate Event</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to reactivate your event?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <a class="btn btn-success" asp-controller="Organizer" asp-action="ReactivateEvent" asp-route-id="@eventt.EventID">Reactivate Event</a>
+
+                    </div>
+                </div>
             </div>
         </div>
     }
