Added CheckTicket functionality

--- a/TicketSystem/Views/Organizer/CheckTickets.cshtml
+++ b/TicketSystem/Views/Organizer/CheckTickets.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    
+        Ticket ticket = ViewBag.Ticket;
 }
 
 <div class="row">
@@ -8,13 +8,22 @@
         <h2>Check Tickets</h2>
         <br />
         <p>Please type ticket ID to validate the ticket:</p>
-        <form class="form-inline">
+        @using (Html.BeginForm("checktickets", "organizer", null, FormMethod.Post)){
             <div class="form-group mx-sm-3 mb-2">
-                <input type="text" class="form-control" id="inputTicketID" placeholder="Ticket ID">
+                <input name="ticket_id" ="text" class="form-control" id="inputTicketID" placeholder="Ticket ID">
             </div>
             <button type="submit" class="btn btn-primary mb-2">Validate</button>
+        }
+
+
+
+        <form class="form-inline">
+
         </form>
     </div>
 </div>
 
+
+<p>@ticket.TicketID</p>
+<p>@ticket.CustomerFirstname</p>
 
