--- a/TicketSystem/Views/Organizer/ResendTicket.cshtml
+++ b/TicketSystem/Views/Organizer/ResendTicket.cshtml
@@ -32,8 +32,8 @@
 
         <div class="modal-footer">
 
-            <a  class="btn btn-secondary"  asp-controller="organizer" asp-action="organizerviewevent" asp-route-id="@ticket.EventID">Close</a>
-            <button type="submit" class="btn btn-primary" asp-controller="organizer" asp-action="organizerviewevent" asp-route-id="@ticket.EventID">Send ticket</button>
+            <a  class="btn btn-secondary"  asp-controller="organizer" asp-action="organizerviewevent" asp-route-id="@ticket.EventID"><i class="fas fa-angle-left"></i> Back </a>
+            <button type="submit" class="btn btn-primary" asp-controller="organizer" asp-action="organizerviewevent" asp-route-id="@ticket.EventID"><i class="far fa-paper-plane"></i> Send ticket</button>
         </div>
 }
         </div>
