--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -49,7 +49,7 @@
                             <p class="mb-0"><b>Location</b> @eventt.Location</p>
                         </div>
                         <div class="col-4">
-                            <button type="button" class="btn btn-light btn-sm mt-3 text-muted btn-nohover">
+                            <button type="button" class="btn btn-light btn-sm mt-2 text-muted btn-nohover">
                                 <i class="fas fa-credit-card"></i> Tickets sold: <span class="badge badge-dark btn-nohover"> @eventt.TicketsSold</span>
                             </button>
                             <button type="button" class="btn btn-light btn-sm d-block mt-3 text-muted btn-nohover">
@@ -58,13 +58,13 @@
                             @if (eventt.ActiveState)
                             {
                                 <a class="btn btn-light btn-sm mt-3 text-muted btn-nohover">
-                                    <i class="fas fa-credit-card"></i> Status: <span class="badge badge-light text-success "> Active </span>
+                                    <i class="fas fa-bookmark"></i> Status: <span class="badge badge-light text-success "> Active </span>
                                 </a>
                             }
                             else
                             {
                                 <a class="btn btn-light btn-sm mt-3 text-muted btn-nohover">
-                                    <i class="fas fa-credit-card"></i> Status: <span class="badge badge-light text-danger"> Inactive</span>
+                                    <i class="fas fa-bookmark"></i> Status: <span class="badge badge-light text-danger"> Inactive</span>
                                 </a>
                             }
 
