--- a/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
@@ -22,12 +22,12 @@
                     <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <hr/>
                     <ul class="eventdata">
-                        <li><b>Location: @eventt.Location</b></li>
-                        <li>Date: @eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</li>
-                        <li>Time: @eventt.Time.Hours:@eventt.Time.Minutes</li>
-                        <li>Price: @eventt.Price kr.</li>
-                        <li>Tickets sold: @eventt.TicketsSold </li>
-                        <li>Tickets left: @eventt.TicketsLeft </li>
+                        <li><b><i class="fas fa-map-marked-alt"></i> Location: @eventt.Location</b></li>
+                        <li><i class="fas fa-calendar-day"></i> Date: @eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</li>
+                        <li><i class="fas fa-clock"></i> Time: @eventt.Time.Hours:@eventt.Time.Minutes</li>
+                        <li><i class="fas fa-money-bill-alt"></i> Price: @eventt.Price kr.</li>
+                        <li><i class="fas fa-credit-card"></i> Tickets sold: @eventt.TicketsSold </li>
+                        <li><i class="fas fa-ticket-alt"></i> Tickets left: @eventt.TicketsLeft </li>
                     </ul>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                     <td>@ticket.CustomerFirstname @ticket.CustomerSurname</td>
                     <td>@ticket.CustomerEmail</td>
                     <td>@ticket.TicketID</td>
-                    <td class="text-center"><a type="button" class="btn btn-primary far fa-paper-plane" asp-controller="organizer" asp-action="resendticket" asp-route-id="@ticket.TicketID"> Resend ticket</a></td>
+                    <td class="text-center"><a class="btn btn-primary " asp-controller="organizer" asp-action="resendticket" asp-route-id="@ticket.TicketID"><i class="far fa-paper-plane"></i> Resend ticket</a></td>
 
                 </tr>
             }
@@ -64,7 +64,7 @@
     </div>
     <div class="row mt-4">
         <div class="col-8">
-            <a  class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@eventt.OrganizerID" asp-route-val="1">Back</a>
+            <a  class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@eventt.OrganizerID" asp-route-val="1"><i class="fas fa-angle-left"></i> Back</a>
         </div>
     </div>
 </form>
