--- a/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
@@ -64,7 +64,7 @@
     </div>
     <div class="row mt-4">
         <div class="col-8">
-            <a  class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@eventt.OrganizerID" asp-route-val="1"><i class="fas fa-angle-left"></i> Back</a>
+            <a  class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@Organizer.OrganizerID" asp-route-val="1"><i class="fas fa-angle-left"></i> Back</a>
         </div>
     </div>
 </form>
