--- a/TicketSystem/Views/Organizer/CreateEvent.cshtml
+++ b/TicketSystem/Views/Organizer/CreateEvent.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
     var Event = ViewBag.Event;
-    var orgID = ViewBag.orgID;
+    Organizer organizer = ViewBag.Organizer;
 }
 
 
 
-@using (Html.BeginForm("CreateEvent", "Organizer", new { id = orgID }, FormMethod.Post))
+@using (Html.BeginForm("CreateEvent", "Organizer", new { id = organizer.OrganizerID }, FormMethod.Post))
 {
 <div class="row">
     <div class="col-md-12">
@@ -69,7 +69,7 @@
     <div class="col-12 mt-2">
         <div class="row">
             <div class="col-8">
-                <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@orgID"><i class="fas fa-angle-left"></i> Back</a>
+                <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@organizer.OrganizerID"><i class="fas fa-angle-left"></i> Back</a>
             </div>
             <div class="col-4 text-right">
                 <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Create event</button>
