--- a/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
@@ -12,30 +12,37 @@
             <div class="row">
                 <div class="col-4">
                     <img src="https://via.placeholder.com/200" alt="Alternate Text" />
-                    
-                    <a class="btn btn-primary mt-5" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID">Edit Event</a>
-                    <a class="btn btn-primary mt-5" asp-controller="Organizer" asp-action="CheckTickets" asp-route-id="@eventt.EventID">Check Tickets</a>
-
+                    <div>
+                        <a class="btn btn-primary mt-4"style="width: 12.5rem;" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID"><i class="fas fa-edit"></i>Edit Event</a>
+                    </div>
+                    <div>
+                        <a class="btn btn-primary mt-2"style="width: 12.5rem;" asp-controller="Organizer" asp-action="CheckTickets" asp-route-id="@eventt.EventID"><i class="fas fa-check"></i>Check Tickets</a>
+                    </div>
+                    </div>
+                    <div class="col-8">
+                        <h3 class="card-title"><u>@eventt.EventName</u></h3>
+                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <hr />
+                        
+                        <ul class="eventdata">
+                            <div class="float-left mr-5">
+                                <li><b><i class="fas fa-map-marked-alt"></i> Location: @eventt.Location</b></li>                       
+                                <li><i class="fas fa-calendar-day mt-3"></i> Date: @eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year at  @eventt.Time.Hours:@eventt.Time.Minutes</li>
+                                <li><i class="fas fa-money-bill-alt mt-3"></i> Price: @eventt.Price kr.</li>
+                            </div>
+                            <div>                            
+                                <br/>
+                                <li><i class="fas fa-credit-card mt-3"></i> Tickets sold: @eventt.TicketsSold </li>
+                                <li><i class="fas fa-ticket-alt mt-3"></i> Tickets left: @eventt.TicketsLeft </li>
+                            </div>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-8">
-                    <h3 class="card-title">@eventt.EventName</h3>
-                    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <hr/>
-                    <ul class="eventdata">
-                        <li><b><i class="fas fa-map-marked-alt"></i> Location: @eventt.Location</b></li>
-                        <li><i class="fas fa-calendar-day"></i> Date: @eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</li>
-                        <li><i class="fas fa-clock"></i> Time: @eventt.Time.Hours:@eventt.Time.Minutes</li>
-                        <li><i class="fas fa-money-bill-alt"></i> Price: @eventt.Price kr.</li>
-                        <li><i class="fas fa-credit-card"></i> Tickets sold: @eventt.TicketsSold </li>
-                        <li><i class="fas fa-ticket-alt"></i> Tickets left: @eventt.TicketsLeft </li>
-                    </ul>
-                </div>
-            </div>
        </div>
     </div>
 </div>
 <hr>
-<h3 class="text-center mb-3">Sold tickets to: @eventt.EventName</h3>
+<h3 class="text-center m-4">Sold tickets to: @eventt.EventName</h3>
 <form action=""> 
     <div class="form-row">
         <table class="table table-striped table-bordered table-hover" style="width:100%">
