--- a/TicketSystem/Views/Organizer/EditEvent.cshtml
+++ b/TicketSystem/Views/Organizer/EditEvent.cshtml
@@ -6,13 +6,12 @@
 
 }
 
-<h3 id="Createevent" class="text-left ml-2">Edit Event</h3>
+<h3 id="Createevent" class="text-left">Edit Event</h3>
 @foreach (var eventt in events)
 {
     @using (Html.BeginForm())
     {
 <div class="row">
-
     <div class="col-md-6">
         <div class="form-group mb-0">
             @Html.Label("Event name *") 
@@ -69,7 +68,7 @@
     </div>
 </div>
 
-<div class="row mt-5">
+<div class="row">
     <div class="col-8 ">
         <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@eventt.OrganizerID"><i class="fas fa-angle-left"></i> Back</a>
     </div>
