--- a/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
+++ b/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
@@ -40,7 +40,7 @@
             @Html.Password("Password", (string)organizer.Password, new { required = true, @class = "form-control", @type = "password" })<br />
         </div>
 
-        <button type="submit" class="btn btn-primary fas fa-check"> Save changes </button>
+        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Save changes</button>
 
     </div>
     <div class="col-6 text-right">
