--- a/TicketSystem/Views/Organizer/EditEvent.cshtml
+++ b/TicketSystem/Views/Organizer/EditEvent.cshtml
@@ -81,7 +81,8 @@ else
 {
     <a class="btn btn-success text-white" data-toggle="modal" data-target="#ModalWindow2"> <i class="fas fa-calendar-check"></i> Reactivate Event</a>
 }
-        
+        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Save changes</button>
+
     </div>
 
 </div>
