--- a/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
+++ b/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
@@ -40,7 +40,7 @@
             @Html.Password("Password", (string)organizer.Password, new { required = true, @class = "form-control", @type = "password" })<br />
         </div>
 
-        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Save changes</button>
+
 
     </div>
     <div class="col-6 text-right">
@@ -48,9 +48,18 @@
             <img src="https://i.pravatar.cc/50" class=" = align-self-center rounded-circle d-inline" />
             <h4 class="d-inline align-middle mt-3 ml-2"> @organizer.ContactPerson</h4>
         </div>
-        <div class="d-block">
-            <a class="btn btn-danger float-right text-white mt-3" data-toggle="modal" data-target="#ModalWindow"> <i class="fas fa-trash-alt"></i> Delete Organizer Account</a>
-        </div>
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-4">
+        <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@organizer.OrganizerID" ><i class="fas fa-angle-left"></i> Back</a>
+    </div>
+    <div class="col-8 text-right">
+
+            <a class="btn btn-danger  text-white " data-toggle="modal" data-target="#ModalWindow"> <i class="fas fa-trash-alt"></i> Delete Organizer Account</a>
+
+        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Save changes</button>
     </div>
 </div>
    
@@ -61,17 +70,18 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Delete Account</h5>
+                    <h5 class="modal-title">Are you sure you want to delete your account? </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Are you sure you want to delete your account? Deleting the account will also cause all information connected to this account to be deleted.</p>
+                    <p>
+                    Deleting the account will also cause all information connected to this account to be deleted. <br /> <b><i class="fas fa-exclamation-circle"></i> All events that is created by this organizer will be deleted</b> </p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <a class="btn btn-danger" asp-controller="Organizer" asp-action="DeleteOrganizer" asp-route-id="@organizer.OrganizerID">Delete</a>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-angle-left"></i> Back</button>
+                    <a class="btn btn-danger" asp-controller="Organizer" asp-action="DeleteOrganizer" asp-route-id="@organizer.OrganizerID"> <i class="fas fa-trash-alt"></i> Delete</a>
 
                 </div>
             </div>
